# VSR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  report.odt
Examples/: CMakeLists.txt  MillionCube.c  cube.h  demos.c  frag.spv  helpers.c  helpers.h  millionCubeStressTest.c  shader.frag  shader.vert  teapot.h  tests.c  vert.spv
Examples/CubeDemo/: cubeDemo.h  shader.frag
Examples/LightingDemo/: lightingDemo.h
Examples/MorphDemo/: morphDemo.h
Examples/ShadowDemo/: frag.spv  shader.frag  shadow.frag  shadow.vert  shadowDemo.h  shadowFrag.spv  shadowVert.spv  vert.spv
Inc/: VSR.h
Src/: GraphicsPipeline_GraphicsPipeline.c  GraphicsPipeline_GraphicsPipeline.h  Renderer_CommandPool.c  Renderer_Instance.h  Renderer_LogicalDevice.h  Renderer_Memory.c  Renderer_Memory.h  Renderer_PhysicalDevice.c  Renderer_PhysicalDevice.h  Renderer_Surface.c  VSR_FragmentShaderDefault.h  VSR_Framebuffer.c  VSR_Framebuffer.h  VSR_GraphicsPipeline.c  VSR_GraphicsPipeline.h  VSR_Image.c  VSR_Mesh.c  VSR_Mesh.h  VSR_Model.c  VSR_RenderPass.c  VSR_RenderPass.h  VSR_Renderer.c  VSR_Renderer.h  VSR_Sampler.c  VSR_Sampler.h  VSR_Shader.c  VSR_Shader.h  VSR_error.c  VSR_error.h
Tests/: CMakeLists.txt  frag.spv  shader.frag  shader.vert  tests.c  vert.spv
VSR/: CMakeLists.txt  VSR.h
VSR/Docs/: API-0.1.md
VSR/Inc/: VSR.h
VSR/Src/: ComputePipeline.c  ComputePipeline.h  GraphicsPipeline_CommandPool.c  GraphicsPipeline_CommandPool.h  GraphicsPipeline_DescriptorPool.c  GraphicsPipeline_DescriptorPool.h  GraphicsPipeline_Framebuffer.c  GraphicsPipeline_Framebuffer.h  GraphicsPipeline_GraphicsPipeline.c  GraphicsPipeline_GraphicsPipeline.h  GraphicsPipeline_RenderPass.c  GraphicsPipeline_RenderPass.h  Renderer.c  Renderer.h  Renderer_CommandPool.c  Renderer_CommandPool.h  Renderer_DescriptorPool.c  Renderer_DescriptorPool.h  Renderer_DeviceQueues.c  Renderer_DeviceQueues.h  Renderer_Framebuffer.c  Renderer_Framebuffer.h  Renderer_GraphicsPipeline.c  Renderer_GraphicsPipeline.h  Renderer_ImageView.c  Renderer_ImageView.h  Renderer_Instance.c  Renderer_Instance.h  Renderer_LogicalDevice.c  Renderer_LogicalDevice.h  Renderer_Memory.c  Renderer_Memory.h  Renderer_PhysicalDevice.c  Renderer_PhysicalDevice.h  Renderer_RenderPass.c  Renderer_RenderPass.h  Renderer_Surface.c  Renderer_Surface.h  Renderer_Swapchain.c  Renderer_Swapchain.h  (+24 more)
